samples/_failures_safe/1761727232_12f509_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da118b5d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_da118b5d.c:163:9: error: expected expression at end of input
  163 |         tokens[token_count].type =
      |         ^~~~~~
./samples/SAFE/__tmp_da118b5d.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da118b5d.c:163:9: error: expected declaration or statement at end of input
